[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caeleakage"
version = "0.1.0"
description = "Causal Adjacency Examination (CAE): formalised leakage-detection for clinical ML pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ali Sadegh-Zadeh", email = "ali.sadegh-zadeh@staffs.ac.uk" },
]
keywords = [
    "machine learning", "data leakage", "clinical AI",
    "causal inference", "biomedical informatics",
    "SMOTE", "cross-validation", "survival prediction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
]
plot = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage     = "https://github.com/salisadegh/caeleakage"
Repository   = "https://github.com/salisadegh/caeleakage"
"Bug Tracker" = "https://github.com/salisadegh/caeleakage/issues"
Paper        = "https://doi.org/10.1016/j.cmpb.2025.XXXXX"

[tool.setuptools.packages.find]
where = ["."]
include = ["caeleakage*"]
