[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caeleakage"
version = "0.1.0"
description = "CAE: reproducible, DAG-guided leakage-risk classification for clinical ML pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ali Sadegh-Zadeh", email = "ali.sadegh-zadeh@staffs.ac.uk" },
]
keywords = ["machine learning", "data leakage", "clinical AI", "causal inference",
            "biomedical informatics", "SMOTE", "cross-validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "build", "twine"]

[project.urls]
Homepage     = "https://github.com/salisadegh/caeleakage"
Repository   = "https://github.com/salisadegh/caeleakage"
"Bug Tracker" = "https://github.com/salisadegh/caeleakage/issues"
Paper        = "https://github.com/salisadegh/cardiac-cae-ml"

[tool.setuptools.packages.find]
where = ["."]
include = ["caeleakage*"]
